force-app/main/default/objects/Itinerary_Component_Join__c/Itinerary_Component_Join__c.object-meta.xml
<CustomObject>
    <label>Itinerary Component Join</label>
    <nameField>
        <displayFormat>ItComp-{0000}</displayFormat>
        <label>Itinerary Component Join Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Component Joins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>