force-app/main/default/objects/Itinerary_Component_Join__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Itinerary Component Joins</relationshipLabel>
    <relationshipName>Itinerary_Component_Joins</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>