force-app/main/default/objects/Itinerary_Component_Join__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <formula>Itinerary__r.Day_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>