force-app/main/default/objects/Itinerary_Component_Join__c/fields/Days_Number__c.field-meta.xml
<CustomField>
    <fullName>Days_Number__c</fullName>
    <label>Days Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>