force-app/main/default/objects/Itinerary_Component_Join__c/fields/Itinerary_Deals__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Deals__c</fullName>
    <formula>Itinerary__r.Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Itinerary Deals</label>
    <type>Text</type>
</CustomField>